@@ -4,7 +4,7 @@ After=local-fs.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/lib/kdump/load.sh
+ExecStart=/usr/lib/kdump/load.sh --shrink
 ExecStop=/usr/lib/kdump/unload.sh
 RemainAfterExit=true
 # It is OK if the initrd is missing in this early attempt
