@@ -13,6 +13,7 @@ DEFINE_OPT(KDUMP_KERNELVER, String, "", KEXEC)
 DEFINE_OPT(KDUMP_CPUS, Int, 1, KEXEC | DUMP)
 DEFINE_OPT(KDUMP_COMMANDLINE, String, "", KEXEC)
 DEFINE_OPT(KDUMP_COMMANDLINE_APPEND, String, "", KEXEC)
+DEFINE_OPT(KDUMP_AUTO_RESIZE, Bool, false, KEXEC)
 #if HAVE_FADUMP
 DEFINE_OPT(KDUMP_FADUMP, Bool, false, MKINITRD)
 DEFINE_OPT(KDUMP_FADUMP_SHELL, Bool, false, MKINITRD | DUMP)
